--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,22 @@ services:
       - 9090:9090
     networks:
       - monitoring
+  
+  grafana:
+    image: grafana/grafana:latest
+    ports:
+      - 3000:3000
+    volumes:
+      - grafana_data:/var/lib/grafana
+    environment:
+      - GF_SECURITY_ADMIN_PASSWORD=admin
+    networks:
+      - monitoring
+    
 
 networks:
   monitoring:
     driver: bridge
+    
+volumes:
+  grafana_data: {}
