add files with nginx

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,17 @@ services:
       - "5000:5000"
     networks:
       - monitoring
+  
+  nginx:
+    image: nginx:latest
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf
+    depends_on:
+      - flask_app
+    networks:
+      - monitoring
 
   prometheus:
     image: prom/prometheus:latest
@@ -12,7 +23,7 @@ services:
       - 9090:9090
     networks:
       - monitoring
-  
+
   grafana:
     image: grafana/grafana:latest
     ports:
